Fixed gap speaker-wrapper

--- a/src/scss/components/_speakers.scss
+++ b/src/scss/components/_speakers.scss
@@ -9,7 +9,7 @@
     margin-top: 96px;
     display: grid;
     grid-template: auto auto / repeat(auto-fill, minmax(200px, 1fr));
-    gap: 60px 54px;
+    gap: 60px 80px;
   }
   &-card {
     display: flex;
@@ -36,6 +36,7 @@
     height: 200px;
     border-radius: 100%;
     box-shadow: 0px 0px 57px #dfb3ca;
+    overflow: hidden;
 
     img {
       transform: scale(1.6);
